service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: NodePort
  ports:
    - name: http
      port: 9001
      targetPort: 9000
      protocol: TCP
  selector:
    app: app-simple
